--- a/src/app/pages/main-gate/frame/auction/style.module.css
+++ b/src/app/pages/main-gate/frame/auction/style.module.css
@@ -56,7 +56,7 @@ h4,
   right: 0;
   z-index: 9;
   width: 10vw;
-  height: 5vh;
+  height: 2.5vw;
   background-image: url(./images/land-state-btn.png);
   background-repeat: no-repeat;
   background-size: contain;
@@ -189,13 +189,13 @@ h4,
 .step5-img {
   background-image: url(./images/10.png);
 }
+
 /* 1920 x 1080 */
 @media (max-width: 1920px) {
   .pointer {
+    width: 10%;
     top: 8%;
-    width: 9vw;
-    height: 4vh;
-    right: 2%;
+    right: 5%;
   }
   .auction-content-text-font {
     margin-top: 1vh;
@@ -212,27 +212,8 @@ h4,
 /* 1280  720*/
 @media (max-width: 1280px) {
   .pointer {
-    top: 6%;
-    right: 5%;
-  }
-}
-/* 900px 400px */
-@media (max-width: 900px) {
-  .pointer {
-    top: 5%;
-    width: 9vw;
-    right: 6%;
-    z-index: 9;
-  }
-  .auction-content-text-font > p {
-    margin: 0;
-  }
-  .auction-img-text {
-    bottom: -5vh;
-    text-align: center;
-  }
-  .auction-img:nth-child(1) > .auction-img-text {
-    bottom: -1.5vh;
+    width: 10%;
+    top: 8%;
   }
 }
 /* 960 x 540 */
@@ -245,6 +226,9 @@ h4,
   }
   .auction-howto-content li {
     margin: 0 auto;
+  }
+  .swiper-slide:last-child .auctionBox {
+    overflow-y: auto;
   }
 }
 /* 920 x 420 */
@@ -269,6 +253,19 @@ h4,
   .auction-howto-content li {
     font-size: 10px;
     margin: 0 auto;
+  }
+}
+/* 900px 400px */
+@media (max-width: 900px) {
+  .auction-content-text-font > p {
+    margin: 0;
+  }
+  .auction-img-text {
+    bottom: -5vh;
+    text-align: center;
+  }
+  .auction-img:nth-child(1) > .auction-img-text {
+    bottom: -1.5vh;
   }
 }
 /* 750 x 370 */
@@ -331,7 +328,6 @@ h4,
     left: 20vw;
     width: 30vw;
     height: 85%;
-    overflow-y: hidden;
     margin-bottom: 1%;
   }
   .auction-content-text p {
@@ -341,7 +337,6 @@ h4,
   .auction-howto-content {
     width: 90%;
     height: 78%;
-    overflow-y: hidden;
     font-size: 1.5vw;
   }
   .auction-howto-content li {
